<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.3</version>
        <relativePath/>
    </parent>

    <groupId>com.domcouch</groupId>
    <artifactId>domcouch-parent</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>DomCouch Parent</name>
    <description>HCL Domino 14.5 Java API emulation over Couchbase</description>

    <modules>
        <module>domino-couchbase-lib</module>
        <module>springboot-demo</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <couchbase-client.version>3.7.4</couchbase-client.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.couchbase.client</groupId>
                <artifactId>java-client</artifactId>
                <version>${couchbase-client.version}</version>
            </dependency>
            <dependency>
                <groupId>com.domcouch</groupId>
                <artifactId>domino-couchbase-lib</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

</project>
